Use relative path for login form

--- a/cornerstone-core/src/main/resources/static/login.html
+++ b/cornerstone-core/src/main/resources/static/login.html
@@ -63,7 +63,7 @@
 
 <body>
 	<div class="container">
-		<form class="form-signin" method="post" action="/login">
+		<form class="form-signin" method="post" action="login">
 			<h3 class="form-signin-heading text-center">请登录</h3>
 			<p>
 				<label for="username" class="visually-hidden">用户</label>
